# Chonost-manifest-os

./: .chonostignore  .env.example  .eslintignore  .gitattributes  .gitignore  .kilocodemodes  .npmrc  .stylelintignore  .tool-versions  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CHONOST_INTEGRATION_WORKFLOWS.md  CHONOST_PROJECT_REPORT.md  CONTRIBUTING.md  CURRENT_STATUS_SUMMARY.md  CURRENT_STATUS_UPDATE.md  Cargo.toml  Chonost Project - Analysis.md  DECISIONS.md  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_GUIDE.md  INTEGRATED_SYSTEM_README.md  MERMAID_INTEGRATION_SUMMARY.md  MIGRATION_PLAYBOOK_COMPLETE_SUMMARY.md  MILESTONE.md  Manus-test-rag.md  PHASE4_VALIDATION_SUMMARY.md  PRIVACY.md  PROJECT_STRUCTURE_SUMMARY.md  README.md  REFACTOR_CLEANUP_MANUAL.md  SYSTEM_VERIFICATION_REPORT.md  TERMS.md  TOOL_INTEGRATION_GUIDE.md  agent-creator.prompt.yml  agent.md  build_desktop_app.py  build_desktop_simple.py  comprehensive_testing.py  (+28 more)
.clinerules/: thai-security-communication.md
.continue/: config.yaml
.github/: labels.yml
.kilocode/: mcp.json
ARTIFACTS/: INVENTORY.md  LOCAL_RUN.md
Docs/: ENV_SETUP_GUIDE.md  Manus-test-rag.md
agents/: code-review-agent.js  memory-thinking-agent.js
backend/: Dockerfile  requirements_integrated.txt
chat-intrigret/: App.jsx  Automations.jsx  ErrorBoundary.jsx  NotFound.jsx  Obsidian AI Plugin - Enhanced Version.md  README.md  ข้อกำหนดโครงการ_ ปลั๊กอิน AI สำหรับ Obsidian.md
chonost-unified/: README.md  pyproject.toml
chonost-unified/backend/: __init__.py  main.py  requirements.txt  run_server.py  test_mcp_imports.py
chonost-unified/backend/mcp/: .dockerignore  Dockerfile  config.py  config.template.json  docker-compose.yml  main.py  models.py
chonost-unified/backend/mcp/apps/: unified_chat_app.py
chonost-unified/backend/mcp/backend/services/mcp-server/: main.py  requirements.txt
chonost-unified/backend/mcp/client/: chat_memory_client.py
chonost-unified/backend/mcp/configs/: ai_orchestrator_queries.sql  fine_tuning_config.py
chonost-unified/backend/mcp/core/: ai_ready_analyzer.py  file_system_analyzer.py  rag_system.py  smart_vault_manager.py
chonost-unified/backend/mcp/docs/: AI_CONVERSATION_ANALYSIS.md  AI_ORCHESTRATOR_README.md  AI_PERFORMANCE_METRICS.md  ARCHITECTURE.md  CHAT_APP_README.md  DOCKER_README.md  ENVIRONMENT_RECOVERY.md  ENV_SETUP_GUIDE.md  MCP_TOOLS_README.md  MCP_TOOLS_SUMMARY.md  NOTION_INTEGRATION_README.md  NOTION_INTEGRATION_SUMMARY.md  PROJECT_STATUS.md  RAG_SYSTEM_SUMMARY.md  README.md  README_AUTO_WATCHER.md  REAL_USAGE_TEST_GUIDE.md  ROADMAP.md  test_watcher.md
chonost-unified/backend/mcp/examples/: notion_integration_example.py
chonost-unified/backend/mcp/mcp/: pool.py  registry.py
chonost-unified/backend/mcp/memory/: chat_memory_manager.py
chonost-unified/backend/mcp/mock_servers/: filesystem.py
chonost-unified/backend/mcp/scripts/: analyze_vault_structure.py  create_vault_structure.py  generate_chatgpt_functions.py  generate_datasets.py  run.bat  start-unified.ps1
chonost-unified/backend/mcp/scripts/core/: complete_vault_management.py
chonost-unified/backend/mcp/scripts/startup/: start-docker.ps1
chonost-unified/backend/mcp/scripts/utilities/: move_existing_files.py  ultimate_trailing_spaces_fixer.py
chonost-unified/backend/mcp/utils/: dataset_generator.py  log.py  ollama_client.py
chonost-unified/frontend/: package.json  tailwind.config.js
chonost-unified/frontend/src/: App.tsx
chonost-unified/frontend/src/components/: ThemeProvider.tsx
chonost-unified/frontend/src/components/AssistantPanel/: AssistantPanel.tsx
chonost-unified/frontend/src/components/KnowledgeExplorer/: KnowledgeExplorer.tsx
chonost-unified/frontend/src/components/Layout/: Layout.tsx
chonost-unified/frontend/src/components/ui/: BookLayout.tsx  Button.tsx  Card.tsx  CharacterDashboard.tsx  CharacterProfile.jsx  CharacterRelationshipMap.tsx  ICON_USAGE.md  Icon.tsx  Input.tsx  MarkdownAnalyzer.tsx  Typography.tsx  package.json  tsconfig.json
chonost-unified/frontend/src/services/: aiService.ts  knowledgeService.ts  mcpService.ts  ragService.ts
chonost-unified/frontend/src/styles/: globals.css
chonost-unified/shared/types/: mcp.ts
config/: ai-commit.config.js
core-services/: main.py
craft-ide/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
craft-ide/src-tauri/: Cargo.toml  tauri.conf.json
craft-ide/src-tauri/src/: main.rs
docs/: AGENTS.md  (+11 more)
nodition/src-tauri/: Cargo.toml  tauri.conf.json
nodition/src-tauri/src/: main.rs
services/api-server/: Dockerfile  analytics_dashboard.tsx  config.py  main.py  pyproject.toml  requirements.txt
services/api-server/agents/: __init__.py
services/api-server/api/: graph_routes.py  manuscript_routes.py
services/api-server/apps/: advanced_chat_app.py  desktop_chat_app.py
services/api-server/backend/: requirements.txt
services/api-server/core/: __init__.py  ai_orchestrator.py  dataset_generator.py  smart_analyzer.py  smart_vault_manager.py
services/api-server/datasets/: ai_orchestrator_requirements.txt  dataset_generation_summary.json  expanded_dataset.json  file_system_training_dataset.json  notion_mcp_config.json  requirements.txt  requirements_agent_ecosystem.txt  requirements_dataset.txt  requirements_notion_ai_server.txt  requirements_notion_integration.txt  test_prompt.txt
services/api-server/examples/: example_usage.py
services/api-server/mcp/: __init__.py  pool.py
services/api-server/mock_servers/: filesystem.py
services/api-server/scripts/: README.md  analyze_vault_structure.py  create_vault_structure.py  run.bat  start-universal.ps1
services/api-server/scripts/core/: setup.py
services/api-server/scripts/utilities/: simple_file_manager.py
services/api-server/src/api/: handlers.py
services/api-server/utils/: env.py  log.py  unified_ai_client.py
unified_template/apps/backend/: README.md  pyproject.toml
unified_template/apps/backend/app/: api.py  database.py  main.py  memory.py  ollama.py  settings.py
unified_template/apps/backend/tests/: test_health.py
(+481 files in other folders)
