[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chonost-unified"
version = "2.2.0"
description = "Chonost Unified Ecosystem - Desktop App + MCP Platform Backend"
authors = [{name = "Chonost Team", email = "team@chonost.ai"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",

    # MCP Integration
    "httpx>=0.25.0",
    "websockets>=12.0",
    "structlog>=23.0.0",

    # AI/ML
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "ollama>=0.1.7",
    "crewai>=0.28.0",

    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "watchdog>=3.0.0",

    # Database
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",

    # Quality & Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.0"
]

[project.optional-dependencies]
mcp = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "peft>=0.4.0",
    "accelerate>=0.20.0"
]
azure = [
    "azureml-core>=1.50.0",
    "azureml-train>=1.50.0",
    "azureml-mlflow>=1.50.0"
]
quality = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"
]
dev = [
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "jupyter>=1.0.0",
    "ipython>=8.17.0"
]

[project.scripts]
chonost-backend = "backend.main:run_app"
chonost-mcp = "backend.mcp.services.orchestrator.main:run_orchestrator"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "asyncio: mark test as async",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "mcp: marks tests as MCP-related"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
