[package]
name = "nodition"
version = "1.0.0"
description = "Desktop application for Notion integration with Tauri"
authors = ["Chonost Team <team@chonost.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/chonost"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
